--- a/main.css
+++ b/main.css
@@ -11,24 +11,26 @@ header {
   color: #ecf0f1;
 }
 
-header h1,
-section h2 {
-  font-weight: normal;
-}
-
-body {
+body, input, textarea {
   font-family: "Roboto", sans-serif;
 }
 
 header,
-section h2 {
+section h2,
+section h3,
+form button{
   font-family: "Bungee", sans-serif;
+  font-weight: normal;
 }
 
 header nav li {
   display: inline;
   margin-left: 16px;
   font-size: 18px;
+}
+
+header nav li:hover {
+  text-decoration: underline;
 }
 
 header nav li a {
@@ -83,3 +85,57 @@ section p {
   margin-right: 32px;
 }
 
+.social-links img {
+  height: 24px;
+}
+
+.social-links li {
+  display: inline;
+  margin-right: 8px;
+}
+
+.social-links li a {
+  text-decoration: none;
+}
+
+#contact .container {
+  display: block;
+}
+
+.contact-methods {
+  display: flex;
+  justify-content: space-between;
+}
+
+form input,
+form textarea,
+form button {
+  display: block;
+  width: 320px;
+  margin-bottom: 8px;
+  padding: 8px;
+} 
+
+form textarea {
+  resize: none;
+  height: 180px;
+}
+
+section h3 {
+  margin-bottom: 16px;
+}
+
+form button {
+  background-color: #182c61;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #314e9e;
+}
+
+input:focus, textarea:focus {
+  outline-color: #182c61;
+}
