--- a/main.css
+++ b/main.css
@@ -127,7 +127,7 @@ section h3 {
 
 form button {
   background-color: #182c61;
-  color: #fff;
+  color: #ecf0f1;
   border: none;
   cursor: pointer;
 }
@@ -138,4 +138,11 @@ form button:hover {
 
 input:focus, textarea:focus {
   outline-color: #182c61;
+}
+
+footer {
+  background-color: #182c61;
+  color: #ecf0f1;
+  padding: 16px 0;
+  text-align: center;
 }
